kubernetes/yamls/application/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: facebook
  namespace: facebook
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - susi-facebook.tk
    secretName: fbbot-tls
  rules:
  - host: susi-facebook.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: facebook
          servicePort: 80
